--- a/src/CocktailRecipeLookup/Views/Home/Index.cshtml
+++ b/src/CocktailRecipeLookup/Views/Home/Index.cshtml
@@ -9,3 +9,25 @@
 
     In hendrerit gravida orci, placerat lacinia orci. Nullam congue maximus elit. Sed maximus feugiat risus, a facilisis sem porta ac. Vivamus ac rutrum dui. Nulla malesuada convallis arcu, vitae sagittis eros eleifend ut. Sed suscipit eros at tortor ultrices tempor. Nullam vitae dictum tortor. In hac habitasse platea dictumst.
 </p>
+
+<button id="drinkTest">TEST</button>
+
+<script>
+    $(document).ready(function () {
+        $('#drinkTest').click(function () {
+            debugger
+            var ingredientList = ["lemon-juice", "gin", "triple-sec"];
+            $.ajax({
+                type: 'GET',
+                url: '/Drinks/SearchByIngredients/',
+                traditional: true,
+                data: { ingredients: ingredientList },
+                success: function (result) {
+                    console.log(result);
+                }
+            });
+
+        });
+
+    });
+</script>
