--- a/src/CocktailRecipeLookup/Views/Shared/_Layout.cshtml
+++ b/src/CocktailRecipeLookup/Views/Shared/_Layout.cshtml
@@ -23,20 +23,20 @@
     </ul>
     <header>
         <div class="navbar-fixed">
-            <nav class="black"> @* Set Navbar Color *@
+            <nav class="grey lighten-3"> @* Set Navbar Color *@
                 <div class="nav-wrapper">
-                    <a asp-controller="Home" asp-action="Index" class="brand-logo">Erik Killops</a>
+                    <a asp-controller="Home" asp-action="Index" class="brand-logo">Spirit Quest</a>
                     <ul class="right hide-on-med-and-down">
                         <li><a asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a asp-controller="Home" asp-action="Projects">Projects</a></li>
+                        <li><a asp-controller="Drinks" asp-action="Index">Recipes</a></li>
                     </ul>
                     <a href="#" data-activates="hamburger" class="button-collapse right"><i class="material-icons">menu</i></a>
                 </div>
             </nav>
         </div>
-        @*<div class="parallax-container">
-            <div class="parallax"><img src=""></div>
-        </div>*@
+        <div class="parallax-container">
+            <div class="parallax"><img src="~/img/cocktails.jpeg"></div>
+        </div>
     </header>
     <main>
         <div class="container">
@@ -44,26 +44,26 @@
         </div>
         <br />
     </main>
-    <footer class="page-footer black">
+    <footer class="page-footer grey lighten-3">
         <div class="container">
             <div class="row">
                 <div class="col m6 s12">
-                    <h5 class="white-text">About the site</h5>
-                    <p class="white-text">Created using ASP.NET Core and Absolut Drinks Database API</p>
+                    <h5 class="grey-text text-darken-2">About the site</h5>
+                    <p class="grey-text text-darken-2">Created using ASP.NET Core and Absolut Drinks Database API</p>
                 </div>
                 @*<div class="col m3 offset-m3 s12">
-                    <h5 class="white-text">Connect</h5>
+                    <h5 class="grey-text text-darken-2">Connect</h5>
                     <ul>
-                        <li><a class="white-text" href="https://github.com/ekillops">Github</a></li>
-                        <li><a class="white-text" href="www.linkedin.com/in/ekillops">LinkedIn</a></li>
-                        <li><a class="white-text" href="mailto:erik.killops@gmail.com">Email</a></li>
+                        <li><a class="grey-text text-darken-2" href="https://github.com/ekillops">Github</a></li>
+                        <li><a class="grey-text text-darken-2" href="www.linkedin.com/in/ekillops">LinkedIn</a></li>
+                        <li><a class="grey-text text-darken-2" href="mailto:erik.killops@gmail.com">Email</a></li>
                     </ul>
                 </div>*@
             </div>
         </div>
-        <div class="footer-copyright">
+        <div class="footer-copyright grey lighten-3">
             <div class="container">
-                <span class="">© 2017 Erik Killops</span>
+                <span class="grey-text text-darken-2">© 2017 Erik Killops</span>
             </div>
         </div>
     </footer>
