--- a/src/CocktailRecipeLookup/Views/Drinks/SearchResultsPartial.cshtml
+++ b/src/CocktailRecipeLookup/Views/Drinks/SearchResultsPartial.cshtml
@@ -1,13 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Search Results";
+    Layout = null;
 }
 
 @using CocktailRecipeLookup.Models
 @model List<Drink>
 
-<h3>Search Results</h3>
-<hr />
-<br />
 @if (Model.Count == 0)
 {
     <p>No results, consider revising your search parameters.</p>
