--- a/src/CocktailRecipeLookup/Views/Drinks/Index.cshtml
+++ b/src/CocktailRecipeLookup/Views/Drinks/Index.cshtml
@@ -1,76 +1,5 @@
-﻿@{
-    ViewBag.Title = "Drinks";
+﻿@*
+    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
+*@
+@{
 }
-
-@using CocktailRecipeLookup.Models
-@model List<Ingredient>
-
-<h3>Recipe Search</h3>
-<br />
-<p>Select your available ingredients:</p>
-<br />
-<form id="drinkSearch">
-    <div class="input-field">
-        <select id="baseSpirits" multiple>
-            <option disabled>Select base spirits</option>
-            @foreach (var ingredient in Model)
-            {
-                @if (ingredient.isBaseSpirit == true && !ingredient.id.Contains("absolut"))
-                {
-                    <option value="@ingredient.id">@ingredient.name</option>
-                }
-            }
-        </select>
-        <label>Base Spirits</label>
-    </div>
-    <br />
-    <div class="input-field">
-        <select id="ingredients" multiple>
-            <option disabled>Select ingredients</option>
-            @foreach (var ingredient in Model)
-            {
-                @if (ingredient.isBaseSpirit == false && !ingredient.id.Contains("absolut"))
-                {
-                    <option value="@ingredient.id">@ingredient.name</option>
-                }
-            }
-        </select>
-        <label>Ingredients</label>
-    </div>
-    <input type="submit" value="Search Recipes" class="btn" />
-</form>
-
-<div id="searchResultHeader"></div>
-<div id="searchResults"></div>
-
-
-<script>
-    $(document).ready(function () {
-        $("#drinkSearch").submit(function (event) {
-            event.preventDefault();
-
-            $("#searchResultHeader").html("<p>Searching...</p>")
-            $("#searchResults").empty();
-            debugger
-            // Collect form inputs
-            var selectedIngredients = [];
-            $('#ingredients option:selected').each(function () {
-                selectedIngredients.push($(this).val());
-            });
-            $('#baseSpirits option:selected').each(function () {
-                selectedIngredients.push($(this).val());
-            });
-            // Send search request to controller/model
-            $.ajax({
-                url: "Drinks/SearchByIngredients",
-                traditional: true,
-                data: { ingredients: selectedIngredients },
-                success: function (drinkListPartial) {
-                    // Display results
-                    $("#searchResultHeader").html("<p>Search results...</p>")
-                    $("#searchResults").html(drinkListPartial);
-                }
-            })
-        })
-    });
-</script>
