Rework Search UI

--- a/src/CocktailRecipeLookup/Views/Drinks/SearchResults.cshtml
+++ b/src/CocktailRecipeLookup/Views/Drinks/SearchResults.cshtml
@@ -19,7 +19,7 @@ else
         <div class="row">
             <div class="col m8">
                 <div class="row">
-                    <h4>@drink.name</h4>
+                    <h4><a class="black-text" asp-controller="Drinks" asp-action="Details" asp-route-id="@drink.id">@drink.name</a></h4>
                     <div class="col m4">
                         <u>Flavor Profile:</u>
                         <ul>
@@ -41,7 +41,7 @@ else
                 </div>
             </div>
             <div class="col m4">
-                <img src="@("http://assets.absolutdrinks.com/drinks/300x400/"+ drink.id +".png")" alt="@(drink.name + " image")" />
+                <a class="black-text" asp-controller="Drinks" asp-action="Details" asp-route-id="@drink.id"><img src="@("http://assets.absolutdrinks.com/drinks/300x400/"+ drink.id +".png")" alt="@(drink.name + " image")" /></a>
             </div>
         </div>
     }
