--- a/src/CocktailRecipeLookup/Views/Shared/_Layout.cshtml
+++ b/src/CocktailRecipeLookup/Views/Shared/_Layout.cshtml
@@ -20,22 +20,44 @@
     <ul class="side-nav" id="hamburger">
         <li><a asp-controller="Drinks" asp-action="UseAvailableIngredients">Use What's Available</a></li>
     </ul>
+    @* Drop down for search *@
+
     <header>
         <div class="navbar-fixed">
-            <nav class="grey lighten-3"> @* Set Navbar Color *@
+            <nav class="grey lighten-3">
+                @* Set Navbar Color *@
                 <div class="nav-wrapper">
                     <a asp-controller="Home" asp-action="Index" class="brand-logo left">Spirit Quest</a>
                     <ul class="right hide-on-med-and-down">
                         <li><a asp-controller="Drinks" asp-action="UseAvailableIngredients">Use What's Available</a></li>
                     </ul>
                     <a href="#" data-activates="hamburger" class="button-collapse right grey-text text-darken-2"><i class="material-icons">menu</i></a>
-                    <form class="right" asp-controller="Drinks" asp-action="Search">
-                        <div class="input-field">
-                            <input id="search" type="search" name="query" placeholder="Search by drink name...">
-                            <label class="label-icon" for="search"><i class="material-icons grey-text text-darken-2">search</i></label>
-                            <i class="material-icons">close</i>
-                        </div>
-                    </form>
+                    <ul class="right">
+                        <li>
+                            <a id="toggle-search" href="#!">
+                                <i class="material-icons grey-text text-darken-2">search</i>
+                            </a>
+                        </li>
+                    </ul>
+                    @*<form class="right" asp-controller="Drinks" asp-action="Search">
+                            <div class="input-field">
+                                <input id="search" type="search" name="query" placeholder="Search by drink name...">
+                                <label class="label-icon" for="search"><i class="material-icons grey-text text-darken-2">search</i></label>
+                                <i class="material-icons">close</i>
+                            </div>
+                        </form>*@
+                </div>
+                <div id="search" class="row white-text grey darken-3">
+                    <div class="container">
+                        <form asp-controller="Home" asp-action="Search">
+                            <input class="form-control" type="text" placeholder="Search ..." name="query">
+                            <input name="SearchType" type="radio" id="search-drinks" value="drinks" checked/>
+                            <label for="search-drinks">Drinks</label>
+                            <input name="SearchType" type="radio" value="ingredients" id="search-ingredients" />
+                            <label for="search-ingredients">Ingredients</label>
+                            <button class="right btn waves-effect waves-light" type="submit">Search</button>
+                        </form>
+                    </div>
                 </div>
             </nav>
         </div>
@@ -59,10 +81,10 @@
                 <div class="col m4 offset-m4 s12">
                     <h5 class="grey-text text-darken-2">Cocktail Resources</h5>
                     <ul>
-                        <li><a class="grey-text text-darken-2"href="http://imbibemagazine.com/category/recipes/cocktails-spirits-recipes/">Imbibe Magazine</a></li>
-                        <li><a class="grey-text text-darken-2"href="https://drinkstraightup.com/">The Straight Up</a></li>
-                        <li><a class="grey-text text-darken-2"href="http://www.tuxedono2.com/">Tuxedo No. 2</a></li>
-                        <li><a class="grey-text text-darken-2"href="http://www.seriouseats.com/recipes/topics/meal/drinks/cocktails">Serious Eats</a></li>
+                        <li><a class="grey-text text-darken-2" href="http://imbibemagazine.com/category/recipes/cocktails-spirits-recipes/">Imbibe Magazine</a></li>
+                        <li><a class="grey-text text-darken-2" href="https://drinkstraightup.com/">The Straight Up</a></li>
+                        <li><a class="grey-text text-darken-2" href="http://www.tuxedono2.com/">Tuxedo No. 2</a></li>
+                        <li><a class="grey-text text-darken-2" href="http://www.seriouseats.com/recipes/topics/meal/drinks/cocktails">Serious Eats</a></li>
                     </ul>
                 </div>
             </div>
