add Help modal to UseAvailable section

--- a/src/CocktailRecipeLookup/Views/Drinks/UseAvailableIngredients.cshtml
+++ b/src/CocktailRecipeLookup/Views/Drinks/UseAvailableIngredients.cshtml
@@ -7,43 +7,57 @@
 
 <h3>Use What's Available</h3>
 <br />
-<p>Select your available ingredients from the lists below and search to find cocktails you can make without buying a thing.</p>
+<p>Select your available ingredients from the lists below and search to find cocktails you can make using only what you have.</p>
 <br />
-<form id="drinkSearch">
-    <div class="input-field">
-        <select id="baseSpirits" multiple>
-            <option disabled>Select base spirits</option>
-            @foreach (var ingredient in Model)
-            {
-                @if (ingredient.isBaseSpirit == true && !ingredient.id.Contains("absolut"))
+<div class="row">
+    <form id="drinkSearch">
+        <div class="input-field">
+            <select id="baseSpirits" multiple>
+                <option disabled>Select base spirits</option>
+                @foreach (var ingredient in Model)
                 {
-                    <option value="@ingredient.id">@ingredient.name</option>
+                    @if (ingredient.isBaseSpirit == true && !ingredient.id.Contains("absolut"))
+                    {
+                        <option value="@ingredient.id">@ingredient.name</option>
+                    }
                 }
-            }
-        </select>
-        <label>Base Spirits</label>
-    </div>
-    <br />
-    <div class="input-field">
-        <select id="ingredients" multiple>
-            <option disabled>Select ingredients</option>
-            @foreach (var ingredient in Model)
-            {
-                @if (ingredient.isBaseSpirit == false && !ingredient.id.Contains("absolut"))
+            </select>
+            <label>Base Spirits</label>
+        </div>
+        <br />
+        <div class="input-field">
+            <select id="ingredients" multiple>
+                <option disabled>Select ingredients</option>
+                @foreach (var ingredient in Model)
                 {
-                    <option value="@ingredient.id">@ingredient.name</option>
+                    @if (ingredient.isBaseSpirit == false && !ingredient.id.Contains("absolut"))
+                    {
+                        <option value="@ingredient.id">@ingredient.name</option>
+                    }
                 }
-            }
-        </select>
-        <label>Ingredients</label>
-    </div>
-    <input type="submit" value="Search Recipes" class="btn" />
-</form>
+            </select>
+            <label>Ingredients</label>
+        </div>
+        <input type="submit" value="Search Recipes" class="btn" />
+        <button class="btn btn-flat right" data-target="help">Help</button>
+    </form>
+</div>
 <br />
 <div id="searchResultHeader"></div>
 <div id="searchResults"></div>
 
+@* Modal for Help button *@
+<div id="help" class="modal">
+    <div class="modal-content">
+        <h4>Help</h4>
+        <p>Drinks, ingredients, and recipes on ADDb are listed in very specific and not always logical way. For instance, if you select <em>Cointreau</em> recipes using <em>Triple Sec</em> will not match. For best results select all variations of an ingredient. If you need help identifying ingredients or locating a recipe you think is missing from your results, use the search bar at the top of the page.</p>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class="modal-action modal-close waves-effect btn-flat">Close</a>
+    </div>
+</div>
 
+@* Activate search *@
 <script>
     $(document).ready(function () {
         $("#drinkSearch").submit(function (event) {
