--- a/src/CocktailRecipeLookup/Views/Shared/_Layout.cshtml
+++ b/src/CocktailRecipeLookup/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
             <div class="row">
                 <div class="col m4 s12">
                     <h5 class="grey-text text-darken-2">About the site</h5>
-                    <p class="grey-text text-darken-2">Created using ASP.NET Core and <a class="grey-text text-darken-2" href="https://addb.absolutdrinks.com/docs/">Absolut Drinks Database API</a></p>
+                    <p class="grey-text text-darken-2">Created using ASP.NET Core and <a class="grey-text text-darken-2" href="https://addb.absolutdrinks.com/docs/">Absolut Drinks Database API (ADDb)</a></p>
                 </div>
                 <div class="col m4 offset-m4 s12">
                     <h5 class="grey-text text-darken-2">Cocktail Resources</h5>
