--- a/src/CocktailRecipeLookup/Views/Home/Index.cshtml
+++ b/src/CocktailRecipeLookup/Views/Home/Index.cshtml
@@ -2,10 +2,14 @@
     ViewBag.Title = "Home - Index";
 }
 
-<h1>Cocktail Recipe Lookup</h1>
+<br />
+<br />
+<h1 id="title">Spirit Quest</h1>
 
-<p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce suscipit condimentum feugiat. Vestibulum tempus aliquet ante, quis finibus urna maximus eget. Curabitur hendrerit, ligula non porta maximus, sapien lectus mollis mi, tempor varius neque orci eu magna. Mauris eu condimentum orci. Vestibulum imperdiet tellus mollis, mattis neque gravida, tempor ante. Nam blandit tellus lorem, quis ultricies metus tristique ac. Quisque sed dignissim ipsum. Donec et arcu vestibulum, tristique ex at, commodo sapien. Morbi dapibus congue ex, at faucibus lectus aliquam at. Integer convallis justo vel sagittis tincidunt. Fusce pellentesque, dolor non mollis accumsan, turpis sem euismod est, quis tempor massa tellus consectetur odio. Curabitur diam risus, maximus sit amet varius nec, sagittis interdum felis. Etiam gravida augue lectus, a iaculis nisl commodo at.
-
-    In hendrerit gravida orci, placerat lacinia orci. Nullam congue maximus elit. Sed maximus feugiat risus, a facilisis sem porta ac. Vivamus ac rutrum dui. Nulla malesuada convallis arcu, vitae sagittis eros eleifend ut. Sed suscipit eros at tortor ultrices tempor. Nullam vitae dictum tortor. In hac habitasse platea dictumst.
-</p>
+<div class="row center">
+    <h4 id="sub-title">Discover the perfect cocktail recipe, using only what you have on hand.</h4>
+</div>
+<br />
+<div class="row center">
+    <a class="center btn-large waves-effect waves-light" asp-controller="Drinks" asp-action="UseAvailableIngredients">Find Recipes</a>
+</div>
