--- a/src/CocktailRecipeLookup/Views/Shared/_Layout.cshtml
+++ b/src/CocktailRecipeLookup/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                 <div class="nav-wrapper">
                     <a asp-controller="Home" asp-action="Index" class="brand-logo left">Spirit Quest</a>
                     <ul class="right hide-on-med-and-down">
-                        <li><a asp-controller="Drinks" asp-action="UseAvailableIngredients">Use What's Available</a></li>
+                        <li><a asp-controller="Drinks" asp-action="UseAvailableIngredients">Use What You Have</a></li>
                     </ul>
                     <a href="#" data-activates="hamburger" class="button-collapse right grey-text text-darken-2"><i class="material-icons">menu</i></a>
                     <ul class="right">
