Add CustomSearch feature

--- a/src/CocktailRecipeLookup/Views/Drinks/UseWhatYouHave.cshtml
+++ b/src/CocktailRecipeLookup/Views/Drinks/UseWhatYouHave.cshtml
@@ -50,7 +50,7 @@
 <div id="help" class="modal">
     <div class="modal-content">
         <h4>Help</h4>
-        <p>Drinks, ingredients, and recipes on ADDb are listed in very specific and not always logical way. For instance, even with <em>Cointreau</em> selected, recipes using <em>Triple Sec</em> will not match. For best results select all variations of an ingredient. If you need help identifying ingredients or locating a recipe you think is missing from your results, use the search bar at the top of the page.</p>
+        <p>Drinks, ingredients, and recipes on ADDb are listed in very specific and not always logical ways. For instance, even with <em>Cointreau</em> selected, recipes using <em>Triple Sec</em> will not match. For best results select all variations of an ingredient. If you need help identifying ingredients or locating a recipe you think is missing from your results, use the search bar at the top of the page.</p>
     </div>
     <div class="modal-footer">
         <a href="#!" class="modal-action modal-close waves-effect btn-flat">Close</a>
