--- a/src/CocktailRecipeLookup/Views/Home/Index.cshtml
+++ b/src/CocktailRecipeLookup/Views/Home/Index.cshtml
@@ -11,5 +11,5 @@
 </div>
 <br />
 <div class="row center">
-    <a class="center btn-large waves-effect waves-light" asp-controller="Drinks" asp-action="UseAvailableIngredients">Find Recipes</a>
+    <a class="center btn-large waves-effect waves-light" asp-controller="Drinks" asp-action="UseWhatYouHave">Find Recipes</a>
 </div>
